--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
 	<color name="color_font">#ffaaffff</color>
 	<color name="color_accent">#ff11ff55</color>
+	<color name="icon_background">#899CCC</color>
 
 </resources>
