--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources>
 	<!-- Base application theme. -->
 	<style name="Nitterify" parent="@android:style/Theme.Holo">
+		<item name="android:background">@color/main_background</item>
 		<item name="android:windowActionBar">false</item>
 		<item name="android:windowNoTitle">true</item>
 		<item name="android:textColor">@color/color_font</item>
