--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -2,6 +2,7 @@
 <resources>
 
 	<style name="Nitterify" parent="@android:style/Theme.Holo">
+		<item name="android:background">@color/main_background</item>
 		<item name="android:windowActionBar">false</item>
 		<item name="android:windowNoTitle">true</item>
 		<item name="android:textColor">@color/color_font</item>
